# blender-ai-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.md  README.md  SECURITY.md  cline_mcp_settings_snippet.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pr_checks.yml  publish_docker.yml  release.yml
_docs/: AVAILABLE_TOOLS_SUMMARY.md  COLLECTION_TOOLS_ARCHITECTURE.md  CURVE_TOOLS_ARCHITECTURE.md  GITHUB_APP_SETUP.md  LLM_GUIDE_V2.md  MATERIAL_TOOLS_ARCHITECTURE.md  MEGA_TOOLS_ARCHITECTURE.md  MESH_TOOLS_ARCHITECTURE.md  MODELING_TOOLS_ARCHITECTURE.md  PROPOSAL_TOOLS_LAYERING.md  PROPOSED_TOOLS1.md  SCENE_TOOLS_ARCHITECTURE.md  SCULPT_TOOLS_ARCHITECTURE.md  SYSTEM_TOOLS_ARCHITECTURE.md  Spacial-intelligence-upgrades-for-blender-ai-mcp.md  TOOLS_ARCHITECTURE_DEEP_DIVE.md  UV_TOOLS_ARCHITECTURE.md  blender-ai-mcp-vision-reference-understanding-plan.md
_docs/TOOLS/: LATTICE_TOOLS_ARCHITECTURE.md  MEGA_TOOLS_ARCHITECTURE.md  MESH_TOOLS_ARCHITECTURE.md  MODELING_TOOLS_ARCHITECTURE.md  README.md  SCENE_TOOLS_ARCHITECTURE.md
_docs/_ADDON/: README.md  rpc_architecture.md
_docs/_CHANGELOG/: 1-2025-11-22-project-init-and-rpc.md  10-2025-11-22-cicd-standardization.md  101-2025-12-08-unified-parameter-resolution.md  102-2025-12-08-ensemble-modifier-fixes.md  103-2025-12-09-router-semantic-matching-fix.md  104-2025-12-10-per-step-adaptation-control.md  105-2025-12-10-flexible-yaml-parameter-loading.md  108-2025-12-12-unified-expression-evaluator.md  121-2025-12-20-workflow-catalog-import.md  140-2026-03-23-programmatic-sculpt-replacement-policy.md  144-2026-03-24-tool-layering-goal-first-strategy-planning.md  145-2026-03-24-router-workflow-task-triage.md  146-2026-03-24-supersede-router-workflow-legacy-tasks.md  147-2026-03-24-supersede-reconstruction-legacy-task-forms.md  148-2026-03-24-tool-layering-policy-foundation.md  149-2026-03-24-hidden-atomic-and-goal-first-docs.md  150-2026-03-24-macro-workflow-and-vision-assert-docs.md  151-2026-03-24-instructions-prompts-and-doc-migration-map.md  152-2026-03-24-existing-tool-audit-planning.md  153-2026-03-24-initial-existing-tool-audit-findings.md  154-2026-03-24-metadata-and-truth-audit-findings.md  155-2026-03-24-existing-tool-audit-backlog-and-measure-plan.md  156-2026-03-24-public-surface-wording-alignment.md  157-2026-03-24-first-measure-assert-wave-planning.md  177-2026-04-01-external-provider-precedence-loop-scope-and-task-timeout.md  184-2026-04-01-truth-followup-loop-handoff.md  185-2026-04-01-macro-attach-part-to-surface.md  188-2026-04-02-macro-adjust-head-body-proportion.md  189-2026-04-02-macro-adjust-tail-arc.md  2-2025-11-22-scene-tools.md  (+24 more)
_docs_en/: AVAILABLE_TOOLS_SUMMARY.md
blender_addon/: __init__.py
scripts/: build_addon.py  run_e2e_tests.py  run_streamable_openrouter.sh  vision_harness.py
server/: main.py
tests/: test_collection_tools.py  test_material_tools.py  test_mcp_utils.py  test_mcp_viewport_output.py  test_mesh_foundation.py  test_mesh_list_groups.py  test_mesh_select_targeted_mega.py  test_mesh_selection_advanced.py  test_modeling_tools.py  test_rpc_connection.py  test_scene_construction.py  test_scene_get_mode_handler.py  test_scene_inspect_material_slots.py  test_scene_inspect_mega.py  test_scene_inspect_mesh_topology.py  test_scene_inspect_modifiers.py  test_scene_mode.py  test_scene_tools.py  test_scene_tools_extended.py  test_snapshot_tools.py  test_viewport_control.py
(+1553 files in other folders)
