[project]
name = "blender-ai-mcp"
version = "0.1.0"
description = "Modular MCP Server + Blender Addon for AI-Driven 3D Modeling"
authors = [
    {name = "PC",email = "pciechanski@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastmcp (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
