[project]
name = "blender-ai-mcp"
version = "1.14.0"
description = "Modular MCP Server + Blender Addon for AI-Driven 3D Modeling"
authors = [
    {name = "Patryk Ciechański",email = "patryk.ciechanski@patrykiti.pl"}
]
homepage = "https://github.com/PatrykIti/blender-ai-mcp"
repository = "https://github.com/PatrykIti/blender-ai-mcp"
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastmcp (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]


[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "blender_addon/__init__.py:version"
]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_release = true
build_command = "python scripts/build_addon.py"
assets = ["outputs/blender_ai_mcp.zip"]
commit_message = "chore(release): {version} [skip ci]"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]
