[project]
name = "blender-ai-mcp"
version = "2.2.0"
description = "Modular MCP Server + Blender Addon for AI-Driven 3D Modeling"
authors = [
    {name = "Patryk Ciechański",email = "patryk.ciechanski@patrykiti.pl"}
]
maintainers = [
    {name = "Patryk Ciechański",email = "patryk.ciechanski@patrykiti.pl"}
]
homepage = "https://github.com/PatrykIti/blender-ai-mcp"
repository = "https://github.com/PatrykIti/blender-ai-mcp"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp[tasks] (>=3.1.1,<3.2.0)",
    "pydocket (>=0.18.2,<0.19.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "numpy (>=1.24.0) ; python_version >= \"3.11\"",
    "sentence-transformers (>=5.1.2,<6.0.0) ; python_version >= \"3.11\"",
    "lancedb (>=0.3.0,<1.0.0) ; python_version >= \"3.11\"",
    "pyarrow (>=14.0.0) ; python_version >= \"3.11\""
]


[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "blender_addon/__init__.py:version"
]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_release = true
build_command = "python scripts/build_addon.py"
assets = ["outputs/blender_ai_mcp.zip"]
commit_message = "chore(release): {version} [skip ci]"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["server", "blender_addon", "tests", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
